--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,7 +1,9 @@
-// Ref: https://github.com/nuxt-community/vuetify-module#customvariables
-//
-// The variables you want to modify
-// $font-size-root: 20px;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;800&display=swap');
+
+* {
+  font-family: 'Inter', sans-serif;
+}
+
 $limit__container: 1250px;
 $background: #F2F4F7;
 $blue: #00489D;
