--- a/assets/main.scss
+++ b/assets/main.scss
@@ -56,6 +56,30 @@ img {
   max-width: 1440px;
 }
 
+.banner__grid {
+  margin-top: 157px;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+
+  .grid__item {
+    &:nth-child(2), &:nth-child(6) {
+      margin-top: 47px;
+    }
+    &:nth-child(3), &:nth-child(5) {
+      margin-top: 94px;
+    }
+    &:nth-child(4) {
+      margin-top: 141px;
+    }
+
+    img {
+      margin-bottom: 20px;
+    }
+  }
+}
+
 .banner__content {
 
   h2 {
@@ -363,5 +387,64 @@ img {
     max-width: 400px;
     letter-spacing: 0.02em;
     color: #131313;
+  }
+}
+
+.footer {
+  background: #131313;
+  padding: 33px 0 16px;
+
+  .goToTop {
+    background: #FFFFFF;
+    width: 48px;
+    height: 48px;
+    cursor: pointer;
+    border-radius: 100%;
+  }
+
+  .footer__up {
+    padding: 24px 0;
+    border-bottom: 1px solid #3A3A3A;
+
+    .up__subtext {
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 130%;
+      margin-top: 16px;
+      color: #7E7E7E;
+    }
+
+    .link__margin {
+      margin: 0 40px 0 80px;
+    }
+
+    .footer__link {
+
+      a {
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 24px;
+        text-decoration: none;
+        color: #FFFFFF;
+      }
+    }
+  }
+
+  .footer__down {
+    padding: 24px 0;
+    width: 100%;
+
+    .footer__link a, .footer__copyright {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 100%;
+      text-decoration: none;
+      color: #7E7E7E;
+    }
+
+    .footer__copyright {
+      flex: 1 1 auto;
+      text-align: end;
+    }
   }
 }
