--- a/assets/app.scss
+++ b/assets/app.scss
@@ -1,34 +1,5 @@
 @import "assets/variables";
 @import "assets/main";
 @import "assets/auth";
+@import "assets/client";
 
-.limit__container {
-  max-width: $limit__container;
-  width: 100%;
-}
-
-input, button {
-  outline: none;
-}
-
-html {
-  scroll-behavior: smooth;
-  /* width */
-  ::-webkit-scrollbar {
-    width: 10px;
-  }
-
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: $background;
-  }
-
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: $orange;
-  }
-}
-
-.v-application ul, .v-application ol {
-  padding-left: unset;
-}
