--- a/assets/main.scss
+++ b/assets/main.scss
@@ -684,6 +684,14 @@ input[type=number] {
 
 }
 
+.light__card {
+  background: white !important;
+}
+
+.border-radius-8 {
+  border-radius: 8px;
+}
+
 .purpose__welcome {
   padding: 48px 0;
 
