profile register form revision

--- a/assets/developer.scss
+++ b/assets/developer.scss
@@ -4,11 +4,24 @@
     font-weight: 600;
   }
 
+  .v__container {
+    padding: 24px;
+  }
+
   .form__subtitle {
     font-weight: 400;
     font-size: 16px;
     line-height: 100%;
     color: #7E7E7E;
+  }
+
+  h2.form__title {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    margin: 0;
+    padding: 0;
+    color: #0F0E1E;
   }
 
   .offers {
@@ -42,10 +55,12 @@
       right: 24px;
     }
   }
-  .form__avatar{
+
+  .form__avatar {
     position: relative;
     z-index: 2;
   }
+
   .avatar {
     border-radius: 50%;
     object-fit: cover;
