--- a/assets/developer.scss
+++ b/assets/developer.scss
@@ -224,3 +224,63 @@
 .dev__link {
   text-decoration: none;
 }
+
+.dev__account {
+  .avatar {
+    margin: 0 16px 32px 0;
+  }
+
+  .dev__name {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 130%;
+    color: #131313;
+
+  }
+
+  .dev__experience {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 100%;
+    margin-top: 8px;
+    color: #7E7E7E;
+
+  }
+
+  .form__title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 130%;
+    letter-spacing: 0.02em;
+    color: #000000;
+  }
+
+  .form__text {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 140%;
+    letter-spacing: 0.02em;
+    color: #465472;
+  }
+
+  .v-picker--full-width {
+    width: 100% !important;
+    justify-content: center;
+  }
+
+  .rounded-2 {
+    border-radius: 8px !important;
+  }
+
+  .stack {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #00489D;
+    padding: 3px 16px;
+    background: #E6EDF5;
+    border-radius: 50px;
+    margin-right: 12px;
+    margin-bottom: 12px;
+  }
+}
