--- a/assets/client.scss
+++ b/assets/client.scss
@@ -17,3 +17,76 @@
     }
   }
 }
+
+.quiz__container {
+  .title {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 130%;
+    color: #131313;
+  }
+
+  .sub__title {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 100%;
+    color: #7E7E7E;
+  }
+
+  .changeable__box {
+    background: #FFFFFF;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    min-height: 450px;
+    max-width: 615px;
+    width: 100%;
+
+    .question__header {
+      font-weight: 700;
+      font-size: 20px;
+      line-height: 130%;
+      color: #000000;
+    }
+
+    .box__main {
+      flex: 1 1 auto;
+    }
+
+    .box__footer {
+      button {
+        padding: 9px 32px;
+        border-radius: 8px;
+      }
+
+      .back {
+        font-weight: 500;
+        padding: 3px 15px;
+        font-size: 16px;
+        line-height: 135%;
+        letter-spacing: 0.02em;
+        color: #00489D;
+        cursor: pointer;
+      }
+
+      .optional {
+        .skip {
+          border: 1px solid #00489D;
+          margin-right: 18px;
+          font-weight: 500;
+          font-size: 16px;
+          color: #00489D;
+        }
+
+        .next {
+          background: #00489D;
+          font-size: 16px;
+          border: 1px solid #00489D;
+          font-weight: 500;
+          letter-spacing: 0.02em;
+          color: #FFFFFF;
+        }
+      }
+    }
+  }
+}
