--- a/assets/main.scss
+++ b/assets/main.scss
@@ -679,6 +679,10 @@ input[type=number] {
   }
 }
 
+.opacity-0 {
+  opacity: 0;
+}
+
 .v-application .primary.lighten-3 {
   background-color: white !important;
 }
