--- a/assets/main.scss
+++ b/assets/main.scss
@@ -678,6 +678,14 @@ input[type=number] {
     grid-area: slider;
   }
 }
+.page-enter-active,
+.page-leave-active {
+  transition: opacity 0.2s;
+}
+.page-enter,
+.page-leave-to {
+  opacity: 0;
+}
 
 .opacity-0 {
   opacity: 0;
